--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
+@font-face {
+  font-family: helvetica;
+  src: url("../src/assets/fonts/helvetica/Helvetica.ttf");
+}
+
 @import "tailwindcss";
 
+@theme {
+  --font-helvetica: helvetica, "sans-serif";
+}
